# varianteq

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  token.rs  varianteq.rs
tests/: generic.rs  tests.rs
