[package]
name = "varianteq"
version = "0.1.0"
authors = ["Josh Leeb-du Toit <josh.leebdutoit@gmail.com>"]

description = "Equality of Enum Variants Ignoring Fields"
documentation = "https://docs.rs/crate/varianteq/"
keywords = ["enum", "equality", "partialeq", "macro", "derive"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshleeb/varianteq"

[dependencies]
proc-macro2 = "0.3.6"
quote = "0.5.2"
syn = "0.13.1"

[lib]
proc-macro = true

[[test]]
name = "tests"
